@@ -1,0 +1,36 @@
+---
+version: 2.0.0
+checks:
+  oval:com.puppet.forge.simp.named.bind_dns_rsync:
+    settings:
+      parameter: named::bind_dns_rsync
+      value: default
+    type: puppet-class-parameter
+    controls:
+      nist_800_53:rev4: true
+      nist_800_53:rev4:AC-6: true
+    identifiers:
+      nist_800_53:rev4:
+      - AC-6
+  oval:com.puppet.forge.simp.named.chroot_path:
+    settings:
+      parameter: named::chroot_path
+      value: "/var/named/chroot"
+    type: puppet-class-parameter
+    controls:
+      nist_800_53:rev4: true
+      nist_800_53:rev4:AC-6: true
+    identifiers:
+      nist_800_53:rev4:
+      - AC-6
+  oval:com.puppet.forge.simp.named.service.chroot:
+    settings:
+      parameter: named::service::chroot
+      value: false
+    type: puppet-class-parameter
+    controls:
+      nist_800_53:rev4: true
+      nist_800_53:rev4:AC-6: true
+    identifiers:
+      nist_800_53:rev4:
+      - AC-6
